<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="buttonAdd">+</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="buttonMinus">-</string>
    <string name="button07">7</string>
    <string name="button08">8</string>
    <string name="button09">9</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClear">C</string>
    <string name="button0">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonResult">=</string>
</resources>