<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:minHeight="50dp"
            android:textSize="25dp" />

        <LinearLayout
            android:id="@+id/buttonRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button01"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button02"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button03"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickOperatorButton"
                android:text="@string/buttonAdd"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button04"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button05"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button06"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickOperatorButton"
                android:text="@string/buttonMinus"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button07"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button08"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button09"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickOperatorButton"
                android:text="@string/buttonDivide"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="clearClick"
                android:text="@string/buttonClear"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button0"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/buttonDot"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="onClickOperatorButton"
                android:text="@string/buttonMultiply"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="btnResultClick"
            android:text="@string/buttonResult"
            app:cornerRadius="0dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>